--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
   },
   "homepage": "https://github.com/amit548/news-blog-project#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
+    "http-errors": "^1.7.2",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
+    "@types/http-errors": "^1.8.0",
     "@types/mongoose": "^5.10.4",
     "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.35",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
