--- a/package.json
+++ b/package.json
@@ -25,16 +25,22 @@
   "homepage": "https://github.com/amit548/news-blog-project#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "http-errors": "^1.7.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie": "^0.4.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.35",
