--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node dist/server.ts",
     "build": "tsc",
-    "serve": "ts-node src/server.ts",
-    "dev": "nodemon"
+    "server": "ts-node src/server.ts",
+    "client": "npm run dev --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -44,6 +45,7 @@
     "@types/mongoose": "^5.10.4",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.35",
+    "concurrently": "^6.0.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
