--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "http-errors": "^1.7.2",
@@ -39,6 +40,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.1",
