--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
@@ -42,6 +43,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
