--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,17 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "html-react-parser": "^1.2.4",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-player": "^2.9.0"
+    "react-masonry-css": "^1.0.16",
+    "react-moment": "^1.1.1",
+    "react-player": "^2.9.0",
+    "react-redux": "^7.2.3",
+    "react-responsive-carousel": "^3.2.18"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
