--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "homepage": "https://github.com/amit548/news-blog-project#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
+    "helmet": "^4.5.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
@@ -39,11 +41,13 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
+    "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
