--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.35",
     "concurrently": "^6.0.0",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
