--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "News Blog Project for Client",
   "private": true,
   "scripts": {
-    "start": "node dist/server.ts",
+    "start": "node dist/server.js",
     "build": "tsc",
     "server": "ts-node src/server.ts",
     "client": "npm run dev --prefix client",
@@ -47,7 +47,6 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
-    "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
