tsc compile fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": ["node_modules", "client"]
 }
