--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,6 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
