--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "next": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-ga": "^3.3.0",
+    "react-gtm-module": "^2.0.11",
     "react-moment": "^1.1.1",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.18"
