--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "html-react-parser": "^1.2.4",
     "moment": "^2.29.1",
     "next": "^10.2.0",
+    "nextjs-progressbar": "^0.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moment": "^1.1.1",
