--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -53,6 +54,7 @@
     "@types/mongoose": "^5.10.4",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.35",
+    "@types/web-push": "^3.3.0",
     "concurrently": "^6.0.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
