--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "sitemap": "node scripts/sitemap-job.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -17,6 +18,8 @@
     "moment": "^2.29.1",
     "next": "^10.2.0",
     "nextjs-progressbar": "^0.0.9",
+    "nextjs-sitemap-generator": "^1.3.1",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-moment": "^1.1.1",
@@ -26,6 +29,9 @@
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "node-cron": "^3.0.0",
+    "prettier": "^2.3.0",
+    "shelljs": "^0.8.4",
     "typescript": "^4.2.3"
   }
 }
